# hack25-toyvpn

./: .gitignore  README.md
client/: settings.gradle.kts
client/app/: build.gradle.kts
client/app/src/main/: AndroidManifest.xml
client/app/src/main/java/com/example/toyvpn/: MainActivity.kt  ToyVpnService.kt
client/app/src/main/java/net/anapaya/toyvpn/: MainActivity.kt  ToyVpnService.kt
client/app/src/main/res/drawable/: bg_icon_blue.xml  bg_icon_green.xml  bg_icon_orange.xml  bg_icon_purple.xml  bg_icon_teal.xml  ic_access_time.xml  ic_data_usage.xml  ic_lan.xml  ic_logo.xml  ic_route.xml  ic_speed.xml  ic_wifi.xml
client/app/src/main/res/layout/: activity_main.xml
client/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
client/rust/: Cargo.toml  build.rs
client/rust/src/: client.rs  lib.rs  toyvpn.udl
server/: Cargo.toml  setup_host.sh
server/src/: main.rs
