[package]
name = "toyvpn_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "toyvpn_client"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
android_logger = "0.13"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
libc = "0.2"
