[package]
name = "toyvpn_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "toyvpn_client"

[dependencies]
uniffi = { version = "0.28", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
android_logger = "0.13"
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
scion-stack = { path = "/Users/shitz/code/anapaya/scion/endhost/public/scion-stack" }
scion-proto = { path = "/Users/shitz/code/anapaya/scion/endhost/public/scion-proto/scion-proto" }
edge-tun = { path = "/Users/shitz/code/anapaya/scion/endhost/anapaya/products/edge-app/edge-tun" }
edge-token = { path = "/Users/shitz/code/anapaya/scion/endhost/anapaya/products/edge-app/edge-token" }
scion-sdk-utils = { path = "/Users/shitz/code/anapaya/scion/endhost/public/libs/utils" }
url = "2.5.7"
quinn = { version = "0.11.9-ana.0", package = "anapaya-quinn" }
rustls = { version = "0.23", features = [
  "ring",
  "std",
  "brotli",
], default-features = false }
tun-rs = "2.7.5"
bytes = "1.11.0"


[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
libc = "0.2"
